<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mini_size"
        android:hint="@string/kode_username"
        android:gravity="center"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mini_size"
        android:gravity="center"
        android:hint="@string/kode_password" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/btn_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kode_admin"/>

        <RadioButton
            android:id="@+id/btn_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kode_user" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/btn_pindah_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kode_pindah_register"
        android:gravity="center"
        android:textColor="@color/blue"
        android:layout_marginTop="@dimen/mini_size"/>

</LinearLayout>