<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mini_size"
        android:hint="@string/kode_nama"/>

    <EditText
        android:id="@+id/et_alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="masukkan alamat"/>

    <EditText
        android:id="@+id/et_jenkel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="masukkan jenis kelamin"/>

    <EditText
        android:id="@+id/et_notelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="masukkan no telepon"/>

    <EditText
        android:id="@+id/et_reg_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/kode_username"/>

    <EditText
        android:id="@+id/et_reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/kode_password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/btn_reg_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kode_admin"/>

            <RadioButton
                android:id="@+id/btn_reg_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kode_user"
                android:layout_marginLeft="@dimen/mini_size" />

        </RadioGroup>



    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/mini_size"/>

</LinearLayout>